# dox

./: .tenx.toml  Cargo.toml  README.md
crates/dox/: Cargo.toml
crates/dox/src/: lib.rs
crates/dox/src/render/: text.rs
crates/dox_derive/: Cargo.toml
crates/dox_derive/src/: lib.rs
crates/libdox/: Cargo.toml
crates/libdox/src/: lib.rs
crates/libdox/src/render/: text.rs
examples/doxdemo/: Cargo.toml
examples/doxdemo/src/: main.rs
tests/: Cargo.toml
tests/src/: lib.rs
